name:                forget-your-password
version:             0.1.0.0
synopsis:            Remember a universal key and unique keys for each identity you want to generate for. Let the program do the rest. Get immune to brute force password cracking!
description:         Please see README.md
homepage:            http://github.com/githubuser/forget-your-password#readme
license:             MIT
license-file:        LICENSE
author:              Savor d'Isavano
maintainer:          anohigiasvay@gmail.com
copyright:           2016 Ratina
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ForgetYourPassword.Db
                     , ForgetYourPassword.Lib
  build-depends:       base >=4.7 && <5
                     , bytestring >=0.10
                     , cryptohash >=0.11
                     , sqlite >=0.5
                     , text >=1.2
                     , groundhog >=0.7
                     , groundhog-th >=0.7
                     , groundhog-sqlite >=0.7
  default-language:    Haskell2010

executable forget-your-password
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10
                     , forget-your-password
                     , optparse-applicative >= 0.11
  default-language:    Haskell2010

test-suite forget-your-password-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , forget-your-password
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/forget-your-password
